# web-search-duckduckgo

./: .env  .gitignore  README.md  claude_debug_logger.py  index.html  main.py  pyproject.toml  script.js  styles.css
