[project]
name = "search-with-duckduckgo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
    "python-dotenv>=1.0.0",
    "cachetools>=5.3.0",
    "psutil>=5.9.0",
    "requests (>=2.32.3,<3.0.0)",
]
